--- a/TELECOM-CHURN-PREDICTOR.ipynb
+++ b/TELECOM-CHURN-PREDICTOR.ipynb
@@ -3384,7 +3384,7 @@
    "id": "af9ceeb9",
    "metadata": {},
    "source": [
-    "# MODEL BUILDING USING NUERAL NETWORKS"
+    "# MODEL BUILDING USING NEURAl NETWORKS"
    ]
   },
   {
